samples/_failures_safe/1761291271_029831_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07a2fcff.c: In function ‘main’:
./samples/SAFE/__tmp_07a2fcff.c:161:5: error: expected identifier or ‘(’ at end of input
  161 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_07a2fcff.c:161:5: error: expected declaration or statement at end of input
